# skyshark

./: .gitmodules  Dockerfile  README.md  build.sh  docker-build.sh
quadCptr/: CMakeLists.txt  Makefile  TEST  flightModel.hpp  main.cpp  package.xml  skyshark
quadCptr/gpsSend/: gpsTransmit.py
quadCptr/rcinput/: CMakeLists.txt  rcinput.cpp
quadCptr/rcinput/src/: rcinput.cpp  rcreceive.cpp
quadCptr/rosTest/: CMakeLists.txt
quadCptr/rosTest/src/: rcinput.cpp
src/: CMakeLists.txt  main.cpp  package.xml
src/gpsSend/: README.md  gpsTransmit.py
src/imu_filter/: CMakeLists.txt  complimentaryFilter.cpp  compute_orientation.cpp  madgwick_filter.cpp  madgwick_filter.h  package.xml
src/imu_filter/filters/: madgwick_filter.cpp  madgwick_filter.h
src/input_processing/: CMakeLists.txt  input_processing.cpp  package.xml
src/navio/: CMakeLists.txt  package.xml
src/pwmOutput/: CMakeLists.txt  package.xml  pwmOutput.cpp
src/pwm_output/: CMakeLists.txt  package.xml  pwm_output.cpp
src/rcinput/: CMakeLists.txt  package.xml  rcinput.cpp
src/rcinput/msg/: rcinputContainer.msg
src/sensors/: CMakeLists.txt  barometer.py  package.xml
src/sensors_imu/: CMakeLists.txt  imu.cpp  package.xml
src/sensors_imu/msg/: RawIMU_9.msg
src/skyshark_main/: CMakeLists.txt  package.xml
src/skyshark_main/Utilities/: Kalman.h  millis.hpp  plot.py
src/skyshark_main/gpsSend/: gpsTransmit.py
src/skyshark_main/rcinput/: rcinput.cpp
src/skyshark_main/sensors/: barometer.py
src/skyshark_msgs/: CMakeLists.txt  Topics.txt  package.xml
src/skyshark_msgs/msg/: Acceleration.msg  Position.msg  RotorSpeeds.msg  StabTargets.msg  Velocity.msg  VelocityTarget.msg  frameAngle.msg
src/stabilize/: CMakeLists.txt  package.xml  stabilize.cpp
src/stabilize/stabHeaders/: millis.cpp  millis.h  pid.cpp  pid.h  rcDef.h  stabClass.cpp  stabClass.h
src/test/: CMakeLists.txt  accelData.txt  dataOut.txt  main.cpp  millis.cpp  millis.h  pid.cpp  pid.h  pid.hpp
src/test/backup/: millis.cpp  millis.h
src/test/src/: TODO  main.backup  main.cpp  millis.h  pid.cpp  pid.h  quadCopterFIlter.cpp
systemInput/src/: CMakeLists.txt  package.xml
test/: CMakeLists.txt  PID.cpp  PID.h  TODO  main.cpp
test/src/: quadCopterFIlter.cpp
test/timer/: CMakeLists.txt  main.cpp
