<package format="2">
	<!-- Metadata -->
	<name>input_processing</name>
	<version>0.0.0</version>
	<description>
		Takes in input and processes it to target angle.
	</description>
	<maintainer email="risenanti@gmail.com">Keith Conley</maintainer>
	<license>BSD</license>

	<!-- Required by Catkin -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- Dependencies -->
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>skyshark_msgs</depend>
	<depend>navio</depend>
	<depend>std_msgs</depend>
	<!-- Build Dependencies -->
	<build_depend>message_generation</build_depend>

	<!-- Run Dependencies -->
	<exec_depend>message_runtime</exec_depend>
</package>
