<package format="2">
	<!-- Metadata -->
	<name>navio</name>
	<version>0.0.0</version>
	<description>
		This package provides the navio2 library.
	</description>
	<maintainer email="risenanti@gmail.com">Keith Conley</maintainer>
	<license>BSD</license>

	<!-- Required by Catkin -->
	<buildtool_depend>catkin</buildtool_depend>
</package>
