<package format="2">
	<!-- Metadata -->
	<name>rcinput</name>
	<version>0.0.0</version>
	<description>
		Accepts raw input from rc controller and begins to process it.
	</description>
	<maintainer email="risenanti@gmail.com">Keith Conley</maintainer>
	<license>BSD</license>

	<!-- Required by Catkin -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- Dependencies -->
	<depend>roscpp</depend>
	<depend>navio</depend>

	<!-- Build Dependencies -->
	<build_depend>message_generation</build_depend>

	<!-- Run Dependencies -->
	<exec_depend>message_runtime</exec_depend>
</package>
