<package format="2">
	<!-- Metadata -->
	<name>sensors_imu</name>
	<version>0.0.0</version>
	<description>
		Gets raw data from imu
	</description>
	<maintainer email="mlaga97@gmail.com">Luc Lagarde</maintainer>
	<license>BSD</license>

	<!-- Required by Catkin -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- Dependencies -->
	<depend>roscpp</depend>
	<depend>navio</depend>

	<!-- Build Dependencies -->
	<build_depend>message_generation</build_depend>

	<!-- Run Dependencies -->
	<exec_depend>message_runtime</exec_depend>
</package>
