<package format="2">
	<!-- Metadata -->
	<name>skyshark_main</name>
	<version>0.0.0</version>
	<description>
		This package provides foo capability.
	</description>
	<maintainer email="risenanti@gmail.com">Keith Conley</maintainer>
	<license>BSD</license>

	<!-- Required by Catkin -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- Dependencies -->
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>navio</depend>

	<!-- Build Dependencies -->
	<build_depend>message_generation</build_depend>

	<!-- Run Dependencies -->
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>rospy</exec_depend>
</package>
