<package format="2">
	<!-- Metadata -->
	<name>skyshark_msgs</name>
	<version>0.0.0</version>
	<description>
		Accepts raw input from rc controller and begins to process it.
	</description>
	<maintainer email="mlaga97@gmail.com">Matieu Lagarde</maintainer>
	<license>BSD</license>

	<!-- Required by Catkin -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- Dependencies -->
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
	
	<!-- Build Dependencies -->
	<build_depend>message_generation</build_depend>

	<!-- Run Dependencies -->
	<exec_depend>message_runtime</exec_depend>
</package>
