<package>
  <!-- Package Metadata -->
  <name>rcinput</name>
  <maintainer email="risenanti@gmail.com">Keith Conley</maintainer>
  <description>
    Accepts raw input from rc controller and begins to process it.
  </description>
  <version>0.0.0</version>
  <license>BSD</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
